<resources>
    <string name="app_name">iMenu</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_logout">Log out</string>
    <string name="menu_search">Search</string>
    <string name="url">http://lambada.eu-central-1.elasticbeanstalk.com/</string>
    <string name="enterYourEmail">Enter your email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="dontHaveAccount">"You don't have an account yet?"</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="new_full_name">Full name</string>
    <string name="new_email">Email</string>
    <string name="gender">Gender</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_template">TemplateActivity</string>
    <string name="search_title">Type your dream</string>
    <string name="search_hint">Burger, KFC, ...</string>
    <string name="title_activity_search_results">Search Results</string>
    <string name="title_activity_asdasd">asdasd</string>
    <string name="toolbar_title">ToolBar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food">Food</string>
    <string name="restaurants">Restaurants</string>
    <string name="recommended_for_you">You may like :</string>
    <string name="title_activity_profile">Profile</string>
    <string name="dialog_logout">Are you sure you want to log out?</string>
    <string name="dialog_disconnect">Are you sure you want to disconnect from the restaurant?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_test">Test</string>
    <string name="rate_it">Rate it ?</string>
    <string name="rate_it_dialog_button">Rate it !</string>
    <string name="rating_dialog_title">Let\'s know your opinion</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_item2">ItemActivity2</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="restaurant_contacts"><u>Contacts ?</u></string>
    <string name="restaurant_contacts_dialog_title">Contacts</string>
    <string name="title_activity_admin">Admin</string>
    <string name="user_full_name">Full name :</string>
    <string name="user_dob">Date of birth :</string>
    <string name="user_country">Country :</string>
    <string name="user_city">City :</string>
    <string name="profile_picture">profile picture</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">Re-type new password</string>
    <string name="change_password">Change password ?</string>
    <string name="preferences">Preferences</string>
    <string name="add_remove_preference">Add/Remove preference ?</string>
    <string name="add_remove_restriction">Add/Remove restriction ?</string>
    <string name="add_remove_health_issue">Add/Remove health issue ?</string>
    <string name="add_preference_hint">Burger, lettuce, KFC, ...</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="new_preferences">New preferences :</string>
    <string name="new_restrictions">New restrictions :</string>
    <string name="new_health_issues">New health issues :</string>
    <string name="change_dob">Change it ?</string>
    <string name="restrictions">Restrictions</string>
    <string name="health_issues">Health issues</string>
    <string name="add_restriction_hint">halal, vegetarian ...</string>
    <string name="add_health_issue_hint">Diabetes, Favism ...</string>
    <string name="save_changes">Save changes</string>
    <string name="update_password">Update Password</string>
    <string name="remove_picture">Remove picture?</string>
    <string name="warning">Warning !</string>
    <string name="ok">Ok</string>
    <string name="action_disconnect">Disconnect from restaurant</string>
    <string name="action_order">Order</string>
    <string name="action_call_waiter">Call the waiter</string>
    <string name="place_order">Place order</string>
    <string name="action_connect">Connect to restaurant</string>
    <string name="ex_111">Ex: 111</string>
    <string name="connect">Connect</string>
    <string name="action_connect_restaurant">Connected restaurant</string>
    <string name="add_to_order">Add to order</string>
    <string name="quantity">Quantity :</string>
</resources>
