<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:callingActivity=".activity.HomeActivity">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="800"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_connect_to_restaurant"
        android:orderInCategory="810"
        android:title="@string/action_connect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_disconnect_from_restaurant"
        android:orderInCategory="810"
        android:title="@string/action_disconnect"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:orderInCategory="820"
        android:title="@string/action_order"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_call_waiter"
        android:orderInCategory="830"
        android:title="@string/action_call_waiter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="900"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="1000"
        android:title="@string/action_logout"
        app:showAsAction="never" />


</menu>
