<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:callingActivity=".activity.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:adjustViewBounds= "true"
                android:layout_gravity="center_horizontal"
                android:id="@+id/user_image"
                android:contentDescription="@string/profile_picture"
                android:onClick="loadImageFromGallery"
                android:clickable="true"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:id="@+id/remove_user_image_button"
                android:onClick="removeUserImage"
                android:text="@string/remove_picture"
                android:textSize="10dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_full_name"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_full_name" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:background="#f4f4f4"
            android:textColor="#6262ff"
            android:clickable="true"
            android:id="@+id/user_password_start"
            android:text="@string/change_password">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/user_password_data"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password"
                android:inputType="textPassword"
                android:id="@+id/user_old_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:id="@+id/user_new_password"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_again"
                android:inputType="textPassword"
                android:id="@+id/user_new_password_2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update_password"
                android:id="@+id/user_update_password_button"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_dob"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/user_dob"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:id="@+id/user_dob_change_it"
                android:text="@string/change_dob"
                android:clickable="true"
                android:background="#f4f4f4"
                android:textColor="#6262ff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="20dp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_gender_group">

                <RadioButton
                    android:id="@+id/user_radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/user_radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_country"
                />
            <android.support.v7.widget.AppCompatSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_countries_spinner">
            </android.support.v7.widget.AppCompatSpinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_city"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_city"/>
        </LinearLayout>


        <!-- preferences -->
        <include layout="@layout/user_preferences" />
        <!-- -->

        <!-- restrictions -->
        <include layout="@layout/user_restrictions" />
        <!-- -->

        <!-- health_issues -->
        <include layout="@layout/user_health_issues" />
        <!-- -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/save_changes"
            android:onClick="saveChanges"/>

    </LinearLayout>
</ScrollView>