<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:background="#f4f4f4"
        android:clickable="true"
        android:id="@+id/user_preferences_start"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/plus_icon"
            android:maxWidth="10dp"
            android:maxHeight="10dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/preferences"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:id="@+id/user_preferences_data_layout">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/user_preferences_data"
            />

        <!-- add new preference-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_remove_preference"
            android:background="#f4f4f4"
            android:textColor="#6262ff"
            android:clickable="true"
            android:id="@+id/user_add_remove_preference_start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:id="@+id/user_add_remove_preference_data">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_preference_hint"
                    android:id="@+id/user_add_new_preference_edit_text"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_add_new_preference_edit_text"
                    android:text="@string/add"
                    android:id="@+id/user_add_new_preference_button"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_add_new_preference_edit_text"
                    android:layout_toRightOf="@+id/user_add_new_preference_button"
                    android:text="@string/remove"
                    android:id="@+id/user_remove_new_preference_button"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_new_preferences"
                android:text="@string/new_preferences"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="top"/>

        </LinearLayout>

        <!-- -->
    </LinearLayout>
</LinearLayout>