<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:callingActivity=".activity.LoginActivity"
    tools:showIn="@layout/activity_login">


    <RelativeLayout
        android:id="@+id/login_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:id="@+id/loginLogo"
            android:src="@drawable/lambada_logo"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:id="@+id/emailLoginEditText"
            android:hint="@string/enterYourEmail"
            android:focusable="true"
            android:textColorHint="#a1a1a1"
            android:layout_below="@id/loginLogo" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLoginEditText"
            android:hint="@string/password"
            android:textColorHint="#a1a1a1"
            android:layout_below="@+id/emailLoginEditText"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login"
            android:id="@+id/loginButton"
            android:layout_below="@+id/passwordLoginEditText"
            android:layout_centerHorizontal="true"
            android:onClick="loginHandler"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dontHaveAccount"
        android:id="@+id/newAccountTextView"
        android:clickable="true"
        android:textColor="#aa00ff"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:id="@+id/signUp_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:id="@+id/fullNameEditText"
            android:hint="@string/new_full_name"
            android:textColorHint="#a1a1a1" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:hint="@string/new_email"
            android:textColorHint="#a1a1a1"
            android:layout_below="@id/fullNameEditText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:hint="@string/password"
            android:layout_below="@+id/emailEditText"
            android:textColorHint="#a1a1a1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_below="@id/passwordEditText"
            android:id="@+id/gender_layout"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gender"
                android:id="@+id/textView"
                android:textColor="#000000"
                android:layout_marginTop="22dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/radioGenderGroup">
                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_male"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />
            </RadioGroup>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            android:layout_below="@id/gender_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/signUp"
            android:onClick="signUpHandler" />
    </RelativeLayout>

</LinearLayout>
</ScrollView>